RESOLVED FIXED132900
GIF animations don't restart after scrolling on iOS WebKit1
https://bugs.webkit.org/show_bug.cgi?id=132900
Summary GIF animations don't restart after scrolling on iOS WebKit1
Antti Koivisto
Reported 2014-05-14 02:28:00 PDT
a bug
Attachments
patch (2.60 KB, patch)
2014-05-14 02:33 PDT, Antti Koivisto
kling: review+
Antti Koivisto
Comment 1 2014-05-14 02:33:59 PDT
Andreas Kling
Comment 2 2014-05-14 02:37:18 PDT
Comment on attachment 231438 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=231438&action=review OK > Source/WebKit/mac/WebView/WebView.mm:1581 > + FrameView* view = [self _mainCoreFrame]->view(); I think "FrameView *view" is the appropriate style here.
Antti Koivisto
Comment 3 2014-05-14 02:49:24 PDT
Darin Adler
Comment 4 2014-05-14 09:24:24 PDT
Comment on attachment 231438 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=231438&action=review >> Source/WebKit/mac/WebView/WebView.mm:1581 >> + FrameView* view = [self _mainCoreFrame]->view(); > > I think "FrameView *view" is the appropriate style here. No, the style is right. We do that different formatting thing with * only for Objective-C types, not for C++ types like FrameView. We should probably change the rule though. The only place where we need the "X *" style is in public Objective-C headers. Inside the code it would be easier if we adopted a consistent rule.
Note You need to log in before you can comment on or make changes to this bug.