Source/WebCore: GIF animations don't restart after scrolling on iOS WebKit1 https://bugs.webkit.org/show_bug.cgi?id=132900

Reviewed by Andreas Kling.

* WebCore.exp.in:

Source/WebKit/mac: GIF animations don't restart after scrolling with iOS WebKit1
https://bugs.webkit.org/show_bug.cgi?id=132900
<rdar://problem/16490858>

Reviewed by Andreas Kling.

* WebView/WebView.mm:
(-[WebView _didFinishScrollingOrZooming]):

    Check if the animations need to be restarted after scrolling finishes.



Canonical link: https://commits.webkit.org/150957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168830 268f45cc-cd09-0410-ab3c-d52691b4dbfc